#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-11:
- optimizations to get to real time with full cspad Jira PSAS-162:
-- change from float64 to float32 to speed up scatter and gather
-- specify 'float' type for psana NDArray modules
-- move server copy of masked pixels so it doesn't block workers
- This introduces change in UserG2 code for users	
- fix bug with formatFileName and %C
- start to undo circular inclusions of ParCorAna in src files
	
Tag: V00-00-09:
- fix bug with overriding system_parms via command line arguments
- improve error/diagnostic messages
	
Tag: V00-00-08:
- add MPI_Barrier with output to driver to check for MPI problems 
- make %C increase in h5 output file if there is a .inprogress file
- fix bug with overriding numServers through command line
- improve documentation
	
Tag: V00-00-07
- fix bugs with handling stream in dataset, need to specify streams for 
  non-standard streams, can't specify more servers than DAQ streams
- fix bug in UserG2, did not implement beforeData for incremental
- adjust documentation a bit
- take out userg2 page from sphinxdoc
- add modules to src	
- add code to parCorAnaMaskColorTool to check for geometry information that is
  wrong - on the tutorial data it returned iX, iY that were one pixel greater
  then the image size - image producer must have changed - now the geometry 
  file is out of sync?
	
Tag: V00-00-06
- remove XCorrWorkerBase and replace with WorkerData
- add unit tests for 60 events of cspad2x2
- add UserG2 for 3 methods - incremental accumulate, windowed, g2atend
- update documenation and default_params.py